fixed the z-index for the nav for tablets

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -35,6 +35,7 @@ nav {
   position: absolute;
   right: 0;
   margin-right: 10px;
+  z-index: 2;
 }
 nav ul {
   display: flex;
